tests/paczka2/big_fuzzy/74127789.err
Error in line 7: MFnOZVt0m A249 -2,3
Error in line 6: KbVYDa1v S118 52,9
Error in line 5: MFnOZVt0m A249 34,5
Error in line 14: KbVYDa1v A150 27,6
Error in line 19: iMCPIbbiC A599 46,7
Error in line 30: KbVYDa1v A249 48,75
Error in line 34: iMCPIbbiC S11W 75,5
Error in line 36: FixCnfHvI A599 7,1
Error in line 37: FixCnfHvI A150 51,3
Error in line 38: MFnOZVt0m A150 87,2
Error in line 39: FixCnfHvI A599 64,4
Error in line 47: iMCPIbbiC S118 366,9
Error in line 26: ckZ0zFfMIOh A249 15,7
Error in line 52: MFnOZVt0m A249 64,0
Error in line 65: ckZ0zFfMIOh A599 20,27
Error in line 66: YrH4xoA6c0 S118 28,6
Error in line 69: YrH4xoA6c0 A150 69,2
Error in line 68: S118 A249 46,9
Error in line 75: S118 A150 74,6
Error in line 23: KbVYDa1v A249 57,7
Error in line 67: FixCnfHvI S118 66,1
Error in line 87: KbVYDa1v A150 -1,8
Error in line 82: YrH4xoA6c0 S118 192,5
Error in line 96: S118 S118 55,8
Error in line 104: YrH4xoA6c0 A249 41,7
Error in line 110: S118 A599 9,9
Error in line 114: S118 S118 28,0
Error in line 85: KbVYDa1v A150 7,7
Error in line 115: MFnOZVt0m A150 67,0
Error in line 120: KbVYDa1v A249 76,9
Error in line 135: FixCnfHvI A150 17,7
Error in line 147: KbVYDa1v A249 3,8
Error in line 156: S118 A249 68,5
Error in line 164: iMCPIbbiC S118 46,3
Error in line 161: YrH4xoA6c0 A249 6,4
Error in line 163: MFnOZVt0m A150 10,5
Error in line 168: MFnOZVt0m A10 4,4
Error in line 167: YrH4xoA6c0 S118 34,9
Error in line 153: FixCnfHvI S118 259,8
Error in line 172: YrH4xoA6c0 A599 31,6
Error in line 176: ckZ0zFfMIOh A599 29,1
Error in line 184: S118 S118 ~5,0
Error in line 183: ckZ0zFfMIOh A249 33,3
Error in line 191: ckZ0zFfMIOh S118 92,9
Error in line 196: ckZ0zFfMIOh A249 -1,9
Error in line 204: YrH4xoA6c0 A599 8,4
Error in line 192: ckZ0zFfMIOh A249 1,0
Error in line 198: FixCnfHvI A150 61,4
Error in line 227: ckZ0zFfMIOh A150 76,0
Error in line 222: S118 A150 80,6
Error in line 226: FixCnfHvI A150 33,8
Error in line 233: YrH4xoA6c0 A599 54,1
